--- a/src/pages/home/home.module.css
+++ b/src/pages/home/home.module.css
@@ -1,6 +1,7 @@
-.container{
+.container {
     display: flex;
     justify-content: space-around;
     align-items: start;
+    flex-wrap: wrap;
     gap: 1rem;
 }
